# paperboy

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  meson.build
data/: io.github.calamityjoe87.Paperboy.desktop  io.github.thecalamityjoe87.Paperboy.desktop  style.css
data/icons/symbolic/: saved-feedback.svg.bak
data/resources/: gschemas.compiled  io.github.thecalamityjoe87.Paperboy.gschema.xml  style.css
debian/: changelog  control  copyright  install  paperboy-common.install  paperboy.install  paperboy.lintian-overrides  postinst  rules  watch
debian/patches/: fix-html2rss-build-location.patch  relax-deps.patch  series
debian/upstream/: metadata
meson-templates/: build_constants.vala.in
packaging/appimage/: build-appimage-fallback.sh  build-appimage.sh  libxml2-16_2.14.5+dfsg-0.2_amd64.deb  libxml2_2.9.14+dfsg-1.3ubuntu3.6_amd64.deb
packaging/appimage/AppDirTemplate/: AppRun  io.github.thecalamityjoe87.Paperboy.desktop
packaging/appimage/AppDirTemplate/usr/share/applications/: io.github.thecalamityjoe87.Paperboy.desktop
packaging/appimage/AppDirTemplate/usr/share/glib-2.0/schemas/: gschemas.compiled  io.github.thecalamityjoe87.Paperboy.gschema.xml
packaging/appimage/AppDirTemplate/usr/share/metainfo/: io.github.thecalamityjoe87.Paperboy.appdata.xml
packaging/appimage/AppDirTemplate/usr/share/paperboy/: style.css
packaging/appimage/AppDirTemplate/usr/share/paperboy/icons/symbolic/24x24/: sports-mono.svg.bak
packaging/appimage/AppDirTemplate/usr/share/paperboy/resources/: adblock.css
src/: appWindow.vala  articleCard.vala  articlePane.vala  articleWindow.vala  contentView.vala  heroCard.vala  heroCarousel.vala  imageHandler.vala  main.vala  metaCache.vala  newsSources.vala  placeholderBuilder.vala  prefs.vala  prefsDialog.vala  sidebarManager.vala
src/actions/: articleActions.vala
src/builders/: cardBuilder.vala  placeholderBuilder.vala
src/managers/: animationManager.vala  articleManager.vala  categoryManager.vala  feedUpdateManager.vala  headerManager.vala  imageHandler.vala  imageManager.vala  layoutManager.vala  loadingStateManager.vala  searchManager.vala  sidebarManager.vala  sourceManager.vala  toastManager.vala  viewStateManager.vala
src/models/: articleItem.vala  imageModels.vala  newsArticle.vala  rssSource.vala
src/processors/: imageProcessor.vala  rssFeedProcessor.vala
src/services/: articlePreviewService.vala  articleShare.vala  articleShareService.vala  articleSnippetService.vala  articleStateStore.vala  fetchContext.vala  imageCache.vala  lruCache.vala  metaCache.vala  newsService.vala  newsSources.vala  prefs.vala  previewCache.vala  rssArticleCache.vala  rssFinderService.vala  rssSourceStore.vala  sourceLogos.vala  sourceMetadata.vala  unreadFetchService.vala
src/services/fetchers/: baseFetcher.vala  bbcFetcher.vala  bloombergFetcher.vala  fetcherUtils.vala  foxFetcher.vala  guardianFetcher.vala  nprFetcher.vala  nytFetcher.vala  paperboyFetcher.vala  redditFetcher.vala  reutersFetcher.vala  wsjFetcher.vala
src/services/resolvers/: articleSourceResolver.vala
src/ui/: appWindow.vala  articleCard.vala  articlePane.vala  articleSheet.vala  contentView.vala  fetchNewsController.vala  heroCard.vala  heroCarousel.vala  prefsDialog.vala  sidebarView.vala
src/ui/components/: articleCard.vala  articlePane.vala  articleSheet.vala  heroCard.vala  heroCarousel.vala  toastWidget.vala
src/ui/controllers/: fetchNewsController.vala  searchController.vala
src/ui/dialogs/: locationDialog.vala  prefsDialog.vala  shareDialog.vala
src/ui/menus/: articleMenu.vala  sidebarMenu.vala
src/utils/: appDebugger.vala  browserUtils.vala  categoryIcons.vala  categoryIconsUtils.vala  dataPaths.vala  dataPathsUtils.vala  dateUtils.vala  fetchSequence.vala  httpClient.vala  httpClientUtils.vala  lruCache.vala  pixbufUtils.vala  rssValidator.vala  rssValidatorUtils.vala  sourceLogos.vala  sourceUtils.vala  stripHtmlUtils.vala  urlUtils.vala  workerPool.vala
tools/: articleScraper.vala  imageParser.vala  rssFinder.vala  rssParser.vala  stripHTML.vala  zipLookup.vala
tools/html2rss/: Cargo.toml
tools/html2rss/src/: main.rs
