[package]
name = "html2rss"
version = "0.1.6"
edition = "2021"
authors = ["Paperboy <dev@paperboy.local>"]
license = "MIT"
description = "Generate RSS feed from arbitrary HTML pages (standalone binary)."

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
scraper = "0.20"
serde_json = "1.0"
quick-xml = "0.36"
url = "2"
regex = "1"
rand = "0.8"
encoding_rs = "0.8"
unicode-normalization = "0.1"
once_cell = "1.19"
html-escape = "0.2"
chrono = "0.4"

[profile.release]
opt-level = "z"
lto = true
strip = true
